--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: beige;
+}
+
+figcaption {
+  text-align: center;
+  font-size: smaller;
+
+}
+
+#featured-property {
+  width: 800px;
+  text-align: center;
+}
+
+#details div {
+  text-align: center;
+  height: 25%;
+  background-color: beige;
+  width: 25%;
+  
+}
